Data base inital

--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-android {
-    compileSdkVersion 26
 }
 dependencies {
 }
