--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support:support-vector-drawable:26.+'
     compile 'android.arch.persistence.room:runtime:1.0.0'
+    compile 'com.facebook.stetho:stetho:1.5.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
     testCompile 'junit:junit:4.12'
 }
